Release Notes

* 5/02/2016
  * updated to second version of network brokerage
  * changed AtlasPJB to ignore t1w for pmerge

* 4/28/2016
  * changed retryTask to update t_task.start_time

* 4/27/2016
  * increased nQueueLimit for group to 40k
  * changed JG not to lock counter for pmerge or nQueued<nQueueLimit
  * fixed JG for uniform tasks with ES and non-ES

* 4/26/2016
  * resetting walltimeunit when re-refining tasks
  * updates/protections for new network metrics sources

* 4/25/2016
  * changed AtlasPTB to respect dst: when input is unavailable

* 4/20/2016
  * fixed unlockTasks to release picked files
  * introduced 5% of tolerance in minRamCount
  * introduced MBPerCoreFixed
  * changed JG to set maxWalltime=24h to scouts with cpuTime=0 or None

* 4/19/2016
  * fixed getScoutJobData to use jobs with nEvents<10 but wallTime>6h

* 4/18/2016
  * using 95th percentile for cpuTime
  * fixed dst:XYZ to use nucleus instead of PQ

* 4/14/2016
  * using smaller minTotalWalltime for WQ with site in AtlasPJT

* 4/13/2016
  * changed resume/pauseTask to  activate/throttle jobs
  * fixed JG for pending tasks to release lock
  * fixed dump in ThreadUtils
  * imporved AtlasAJB to work with includedSite=''
  * improved unlockTasks to release tasks locked by dead processes
  * fixed oldPandaIDs in JG for job cloning and multiple consumers

* 4/12/2016
  * added splitRule to mapper attributes

* 4/10/2016
  * fixed sortParallelJobsBySite for oldPandaIDs

* 4/7/2016
  * added eventService to WQ

* 4/5/2016
  * fixed AtlasAJB to works with strings for excluded/includedSites
  * changed AtlasPPP to pause tasks when duplication is found

* 4/4/2016
  * added fractionFreeSpace to AtlasPTB
  * changed AtlasPTB to take fullRW into account for space estimation

* 3/31/2016
  * fixed AtlasAJB for ath releases
  * disabled to send scouts to non-short queues if site is set
  * fixed AtlasAJB for remote access not to ignore resource matching

* 3/30/2016